The set of images to rescan was empty due to erroneously using intersect instead of intersects. Thus, no images were present and the duplicates search ended prematurely and the search result pane was empty.

BUG: 373100
FIXED-IN: 5.4.0

M  +5   -7    libs/album/albummanager.cpp